--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
         <section class="about" id="about">
             <div class="about-img">
-                <img src="/images/tej.jpg" alt="">
+                <img src="tej.jpg" alt="">
             </div>
             
             <div class="about-text">
