--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     
                     <div class="portfolio-content">
                         <div class="row">
-                            <img src="/images/pj1.png" alt="">
+                            <img src="pj1.png" alt="">
                             <div class="layer">
                                 <h5>Gym Website</h5>
                                 <p>The Website was designed and structured using skills such as HTML5, CSS3 for the UI and NodeJS in the backend. Landing page with two more pages for Login and Registration form with responsive web pages.</p>
@@ -195,7 +195,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <img src="/images/pj2.png" alt="">
+                            <img src="pj2.png" alt="">
                             <div class="layer">
                                 <h5>Restaurant Landing Page</h5>
                                 <p>The Website was designed and structured using skills such as HTML5, CSS3 for the UI. Landing page with responsive web page.</p>
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <img src="/images/pj3.png" alt="">
+                            <img src="pj3.png" alt="">
                             <div class="layer">
                                 <h5>Weather App</h5>
                                 <p>The website was developed using HTML, CSS for frontend with ExpressJs and NodeJs in the back using handlebars</p>
