--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
                     <a href="#" style="--i:10"><i class='bx bx-phone'></i></a>
                 </div>
-                <a href="#" class="btn-box">More About Me</a>
+                <a href="#about" class="btn-box">More About Me</a>
             </div>
     
             <div class="design">
